# notion-automations

./: .dockerignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: notion-payroll.yml
docker/: Dockerfile  entrypoint.sh
scheduled/: calculate_payroll_per_shift.py
